# goblin

./: README.md  package.json  rollup.config.js
public/: global.css  index.html  index.tauri.html
src/: App.svelte  main.js  messenger.svelte  stores.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: build.rs  cmd.rs  config.rs  db.rs  init.rs  lib.rs  local.rs  main.rs  messenger.rs  msg.rs
src/components/: ExplorerMode.svelte
src/components/EditorMode/: Editor.svelte
src/components/ExplorerMode/: Explorer.svelte  ItemList.svelte
src/components/Modal/: Balloon.svelte  MessageBoard.svelte  Modal.svelte  NewProject.svelte
src/components/Unit/: Button.svelte  FoldIcon.svelte  X.svelte
src/helpers/: http.js  messenger.js  project.js
