[package]
name = "goblin"
version = "0.1.0"
description = "Local CMS for Goblin"
authors = [ "Davide Kato" ]
license = ""
repository = ""
default-run = "goblin"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive", "rc" ] }
tauri = { version = "0.5", features = [ "all-api", "edge" ] }
rusqlite = { version = "0.22", features = [ "bundled" ] }
dotenv = "0.15"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
dev-server = [ "tauri/dev-server" ]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[lib]
name = "goblib"
path = "src/lib.rs"

[[bin]]
name = "goblin"
path = "src/main.rs"
